test/analyzer/input_programs/invalid_programs/program27.tea
g := (x, y, z) ->
  x * y * z
end

# one of the arguments is (statically)
# semantically invalid
g(1+"s",2,3)
